--- a/templates/anycli.html
+++ b/templates/anycli.html
@@ -16,7 +16,7 @@
 
 {% include 'navbar.html' %}
 
-<div id="maincontainer" style="background-color: mintcream;">
+<div id="maincontainer">
     <table class="table">
         <form method="POST" name="Select Device">
             <tr>
