--- a/templates/mobility.html
+++ b/templates/mobility.html
@@ -17,7 +17,7 @@
 {% set totalpages=(totalentries|int/entryperpage|int)|int +1 %}
 {% endif %}
 
-<div id="maincontainer" style="background-color: mintcream;">
+<div id="maincontainer">
     <table class="tablenoborder" />
     <form method="post">
 
@@ -27,15 +27,15 @@
         <input name='totalpages' type="hidden" value="{{ totalpages }}" />
         <input name='currententryperpage' type='hidden' value="{{ entryperpage }}" />
         <tr>
-            <td width="5%" align="left" nowrap><font class="font13px">Item</font></td>
-            <td width="5%" align="left"><font class="font13px">API</font></td>
-            <td width="10%" align="left" nowrap><font class="font13px">IP address</font></td>
-            <td width="20%" align="left"><font class="font13px">Description</font></td>
-            <td width="10%"><font class="font13px">Platform</font></td>
-            <td width="10%"><font class="font13px">Software version</font></td>
-            <td width="10%"><font class="font13px">Controller role</font></td>
+            <td width="5%" align="left" nowrap><font class="font13pxgrey">Item</font></td>
+            <td width="5%" align="left"><font class="font13pxgrey">API</font></td>
+            <td width="10%" align="left" nowrap><font class="font13pxgrey">IP address</font></td>
+            <td width="20%" align="left"><font class="font13pxgrey">Description</font></td>
+            <td width="10%"><font class="font13pxgrey">Platform</font></td>
+            <td width="10%"><font class="font13pxgrey">Software version</font></td>
+            <td width="10%"><font class="font13pxgrey">Controller role</font></td>
             <td width="30%" align="right">
-                <font class="font13px">
+                <font class="font13pxgrey">
                     Show <select name="entryperpage" onchange="this.form.submit()">
                         <option value="10" {% if entryperpage|int==10 or entryperpage is not defined %} selected {% endif %}>10</option>
                         <option value="25" {% if entryperpage|int==25 %} selected {% endif %}>25</option>
@@ -124,14 +124,14 @@
 
         <p>
             <table class="tablenoborder">
-                <tr style="background-color: black;line-height:20px;">
-                    <td colspan="5" style="color: darkorange;"><center>Add device</center></td>
+                <tr style="background-color: grey;" class="tableTitle">
+                    <td colspan="5"><font class="font13pxwhite"><center>Add device</center></font></td>
                 </tr>
-                <tr style="line-height:20px;">
-                    <td width="20%" align="left" nowrap><font class="font13px">IP address</font></td>
-                    <td width="20%"><font class="font13px">Description</font></td>
-                    <td width="20%"><font class="font13px">Username</font></td>
-                    <td width="20%"><font class="font13px">Password</font></td>
+                <tr>
+                    <td width="20%" align="left" nowrap><font class="font13pxgrey">IP address</font></td>
+                    <td width="20%"><font class="font13pxgrey">Description</font></td>
+                    <td width="20%"><font class="font13pxgrey">Username</font></td>
+                    <td width="20%"><font class="font13pxgrey">Password</font></td>
                     <td width="20%"></td>
                 </tr>
                 <tr>
@@ -164,14 +164,14 @@
     <div id="editDeviceForm" style="display:none;">
         <p>
             <table class="tablenoborder">
-                <tr style="background-color: black;line-height:20px;">
-                    <td colspan="5" style="color: darkorange;"><center>Edit device <span name="titleeditDescription" id="titleeditDescription"></span> (<span name="titleeditIpaddress" id="titleeditIpaddress"></span>)</center></td>
+                <tr  style="background-color: grey;" class="tableTitle">
+                    <td colspan="5"><font class="font13pxwhite"><center>Edit device <span name="titleeditDescription" id="titleeditDescription"></span> (<span name="titleeditIpaddress" id="titleeditIpaddress"></span>)</center></font></td>
                 </tr>
                 <tr style="line-height:20px;">
-                    <td width="12%" align="left" nowrap><font class="font13px">IP address</font></td>
-                    <td width="12%"><font class="font13px">Description</font></td>
-                    <td width="12%"><font class="font13px">Username</font></td>
-                    <td width="12%"><font class="font13px">Password</font></td>
+                    <td width="12%" align="left" nowrap><font class="font13pxgrey">IP address</font></td>
+                    <td width="12%"><font class="font13pxgrey">Description</font></td>
+                    <td width="12%"><font class="font13pxgrey">Username</font></td>
+                    <td width="12%"><font class="font13pxgrey">Password</font></td>
                     <td></td>
                 </tr>
                 <tr>
