--- a/templates/selectinterface.html
+++ b/templates/selectinterface.html
@@ -1,7 +1,7 @@
 <!-- (C) Copyright 2019 Hewlett Packard Enterprise Development LP. -->
 {% block scripts %}
 
-    <div id="maincontainer" style="background-color: mintcream;">
+    <div id="maincontainer">
         <table class="tablenoborder">
             <form method="POST" name="Select interface">
                 <tr>
