--- a/templates/sysmon.html
+++ b/templates/sysmon.html
@@ -10,14 +10,14 @@
 {% set pagename = "System Monitoring" %}
 {% include 'navbar.html' %}
 
-<div id="maincontainer" style="background-color: mintcream;">
+<div id="maincontainer">
     <table class="tablenoborder">
         <tr>
-            <td width="10%" align="left" nowrap><font class="font13px">Process</font></td>
-            <td width="10%" align="left" nowrap><font class="font13px">Status</font></td>
-            <td width="10%" align="left" nowrap><font class="font13px">CPU Utilization</font></td>
-            <td width="10%" align="left" nowrap><font class="font13px">Memory Utilization</font></td>
-            <td width="10%" align="left" nowrap><font class="font13px">Action</font></td>
+            <td width="10%" align="left" nowrap><font class="font13pxgrey">Process</font></td>
+            <td width="10%" align="left" nowrap><font class="font13pxgrey">Status</font></td>
+            <td width="10%" align="left" nowrap><font class="font13pxgrey">CPU Utilization</font></td>
+            <td width="10%" align="left" nowrap><font class="font13pxgrey">Memory Utilization</font></td>
+            <td width="10%" align="left" nowrap><font class="font13pxgrey">Action</font></td>
         </tr>
     </table>
 
