--- a/templates/clearpass.html
+++ b/templates/clearpass.html
@@ -17,7 +17,7 @@
 {% set totalpages=(totalentries|int/entryperpage|int)|int +1 %}
 {% endif %}
 
-<div id="maincontainer" style="background-color: mintcream;">
+<div id="maincontainer">
     <table class="tablenoborder" />
     <form method="post">
 
@@ -27,14 +27,14 @@
         <input name='totalpages' type="hidden" value="{{ totalpages }}" />
         <input name='currententryperpage' type='hidden' value="{{ entryperpage }}" />
         <tr>
-            <td width="5%" align="left" nowrap><font class="font13px">Item</font></td>
-            <td width="5%" align="left"><font class="font13px">API</font></td>
-            <td width="10%" align="left" nowrap><font class="font13px">IP address</font></td>
-            <td width="20%" align="left"><font class="font13px">Description</font></td>
-            <td width="10%"><font class="font13px">Platform</font></td>
-            <td width="10%"><font class="font13px">Software version</font></td>
+            <td width="5%" align="left" nowrap><font class="font13pxgrey">Item</font></td>
+            <td width="5%" align="left"><font class="font13pxgrey">API</font></td>
+            <td width="10%" align="left" nowrap><font class="font13pxgrey">IP address</font></td>
+            <td width="20%" align="left"><font class="font13pxgrey">Description</font></td>
+            <td width="10%"><font class="font13pxgrey">Platform</font></td>
+            <td width="10%"><font class="font13pxgrey">Software version</font></td>
             <td width="30%" align="right">
-                <font class="font13px">
+                <font class="font13pxgrey">
                     Show <select name="entryperpage" onchange="this.form.submit()">
                         <option value="10" {% if entryperpage|int==10 or entryperpage is not defined %} selected {% endif %}>10</option>
                         <option value="25" {% if entryperpage|int==25 %} selected {% endif %}>25</option>
@@ -42,7 +42,7 @@
                         <option value="100" {% if entryperpage|int==100 %} selected {% endif %}>100</option>
                     </select> entries per page (page <select name="pageoffset" onchange="this.form.submit()">
                         {% for i in  range(totalpages) %}
-                        <option value="{{ (i)*entryperpage|int }}" {% if (pageoffset|int)/(entryperpage|int)==(i) %}selected{% endif %}>{{ i+1 }}</option>
+                        <option value="{{ (i)*entryperpage|int }}" {% if (pageoffset|int) /(entryperpage|int) ==(i) %}selected{% endif %}>{{ i+1 }}</option>
                         {% endfor %}
                     </select> of {{ totalpages }} pages)
                 </font>
@@ -94,7 +94,7 @@
             <td><font class="font12px"> {{ info['swversion'] }} {{ info['osversion'] }} </font></td>
             <td align="right">
 
-                <input type="button" name="action" value="Edit" class="editDevice" data-deviceid="{{ info['id'] }}"><input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete this item?')">
+                <input type="button" name="action" value="Endpoints" class="showEndpoints" data-deviceid="{{ info['id'] }}" onclick="highlightdeviceRow(this);" ><input type="button" name="action" value="Certificate Trusts" class="showTrust" data-deviceid="{{ info['id'] }}" onclick="highlightdeviceRow(this);" ><input type="button" name="action" value="Services" class="showServices" data-deviceid="{{ info['id'] }}" onclick="highlightdeviceRow(this);" ><input type="button" name="action" value="Edit" class="editDevice" data-deviceid="{{ info['id'] }}" onclick="highlightdeviceRow(this);" ><input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete this item?')">
                 <input type="hidden" name="id" value="{{ info['id'] }}">
 
             </td>
@@ -104,75 +104,79 @@
     </tbody>
     </table>
 
-        <div id="adddeviceForm" style="display:none;">
-            <table class="tablenoborder">
-                <tr style="background-color: black;line-height:20px;">
-                    <td colspan="6" style="color: darkorange;"><center>Add device</center></td>
-                </tr>
-                <tr>
-                    <td><font class="font13px">IP address</font></td>
-                    <td><font class="font13px">Description</font></td>
-                    <td><font class="font13px">Username</font></td>
-                    <td><font class="font13px">Password</font></td>
-                    <td><font class="font13px">Shared secret</font></td>
-                </tr>
-                <tr>
-                    <form method="post">
-                        <input name='currentpageoffset' type='hidden' data-currentpageoffset="{{pageoffset}}" />
-                        <input name="totalpages" type="hidden" data-totalpages="{{ totalpages }}" />
-                        <input name='entryperpage' type='hidden' value="{{ entryperpage }}" />
-                        <input name='currententryperpage' type='hidden' value="{{ entryperpage }}" />
-                        <input type="hidden" name="searchIpaddress" value="{{ formresult.searchIpaddress }}">
-                        <input type="hidden" name="searchDescription" value="{{ formresult.searchDescription }}">
-                        <input type="hidden" name="searchOsversion" value="{{ formresult.searchVersion }}">
-                        <input type="hidden" name="searchPlatform" value="{{ formresult.searchPlatform }}">
-                        <td><div class="field"><input type="text" name="ipaddress" class="input"></div></td>
-                        <td><div class="field"><input type="text" name="description" class="input" size="50"></div></td>
-                        <td><div class="field"><input type="text" name="username" class="input"></div></td>
-                        <td><div class="field"><input type="password" name="password" class="input"></div></td>
-                        <td><div class="field"><input type="text" name="usersecret" size="40" class="input"></div></td>
-                        <td align="right">
-                            <div class="actions">
-                                <input type="submit" name="action" disabled value="Submit device" class="button">
-                            </div>
-                        </td>
-                    </form>
-                </tr>
-            </table>
-        </div>
+    <div id="adddeviceForm" style="display:none;">
+        <table class="tablenoborder">
+            <tr style="background-color: black;line-height:20px;">
+                <td colspan="6" style="color: darkorange;"><center>Add device</center></td>
+            </tr>
+            <tr>
+                <td><font class="font13px">IP address</font></td>
+                <td><font class="font13px">Description</font></td>
+                <td><font class="font13px">Username</font></td>
+                <td><font class="font13px">Password</font></td>
+                <td><font class="font13px">Shared secret</font></td>
+            </tr>
+            <tr>
+                <form method="post">
+                    <input name='currentpageoffset' type='hidden' data-currentpageoffset="{{pageoffset}}" />
+                    <input name="totalpages" type="hidden" data-totalpages="{{ totalpages }}" />
+                    <input name='entryperpage' type='hidden' value="{{ entryperpage }}" />
+                    <input name='currententryperpage' type='hidden' value="{{ entryperpage }}" />
+                    <input type="hidden" name="searchIpaddress" value="{{ formresult.searchIpaddress }}">
+                    <input type="hidden" name="searchDescription" value="{{ formresult.searchDescription }}">
+                    <input type="hidden" name="searchOsversion" value="{{ formresult.searchVersion }}">
+                    <input type="hidden" name="searchPlatform" value="{{ formresult.searchPlatform }}">
+                    <td><div class="field"><input type="text" name="ipaddress" class="input"></div></td>
+                    <td><div class="field"><input type="text" name="description" class="input" size="50"></div></td>
+                    <td><div class="field"><input type="text" name="username" class="input"></div></td>
+                    <td><div class="field"><input type="password" name="password" class="input"></div></td>
+                    <td><div class="field"><input type="text" name="usersecret" size="40" class="input"></div></td>
+                    <td align="right">
+                        <div class="actions">
+                            <input type="submit" name="action" disabled value="Submit device" class="button">
+                        </div>
+                    </td>
+                </form>
+            </tr>
+        </table>
+    </div>
 
     <div id="editdeviceForm" style="display:none;">
         <table class="tablenoborder">
-        <tr style="background-color: black;line-height:20px;">
-        <td colspan="6" style="color: darkorange;"><center>Edit device <span name="titleeditDescription" id="titleeditDescription"></span> (<span name="titleeditIpaddress" id="titleeditIpaddress"></span>)</center></td>
-        </tr>
-        <tr>
-        <td><font class="font13px">IP address</font></td>
-        <td><font class="font13px">Description</font></td>
-        <td><font class="font13px">Username</font></td>
-        <td><font class="font13px">Password</font></td>
-        <td><font class="font13px">Shared secret</font></td>
-        </tr>
-        <tr>
-            <form method="post">
-                <input type="hidden" name="id" id="editdeviceid" value="">
-                <input name='currentpageoffset' type='hidden' data-currentpageoffset="{{pageoffset}}" />
-                <input name="totalpages" type="hidden" data-totalpages="{{ totalpages }}" />
-                <input name='entryperpage' type='hidden' value="{{ entryperpage }}" />
-                <input name='currententryperpage' type='hidden' value="{{ entryperpage }}" />
-                <input name="deviceid" type="hidden" id="deviceid" />
-                <input type="hidden" name="searchIpaddress" value="{{ formresult.searchIpaddress }}">
-                <input type="hidden" name="searchDescription" value="{{ formresult.searchDescription }}">
-                <input type="hidden" name="searchOsversion" value="{{ formresult.searchVersion }}">
-                <input type="hidden" name="searchPlatform" value="{{ formresult.searchPlatform }}">
-                <td><input type="text" name="ipaddress" class="input" value="" id="editIpaddress"></td>
-                <td><input type="text" name="description" class="input" value="" id="editDescription" size="50"></td>
-                <td><input type="text" name="username" class="input" id="editUsername" value=""></td>
-                <td><input type="password" name="password" class="input" id="editPassword" value=""></td>
-                <td><input type="text" name="usersecret" class="input" id="editsharedSecret" value=""></td>
-                <td align="right"><input type="submit" name="action" value="Submit changes" class="button"></td>
-            </form>
-        </tr>
+            <tr style="background-color: black;line-height:20px;">
+                <td colspan="6" style="color: darkorange;"><center>Edit device <span name="titleeditDescription" id="titleeditDescription"></span> (<span name="titleeditIpaddress" id="titleeditIpaddress"></span>)</center></td>
+            </tr>
+            <tr>
+                <td><font class="font13px">IP address</font></td>
+                <td><font class="font13px">Description</font></td>
+                <td><font class="font13px">Username</font></td>
+                <td><font class="font13px">Password</font></td>
+                <td><font class="font13px">Shared secret</font></td>
+            </tr>
+            <tr>
+                <form method=post">
+                    <input type="hidden" name="id" id="editdeviceid" value="">
+                    <input name='currentpageoffset' type='hidden' data-currentpageoffset="{{pageoffset}}" />
+                    <input name="totalpages" type="hidden" data-totalpages="{{ totalpages }}" />
+                    <input name='entryperpage' type='hidden' value="{{ entryperpage }}" />
+                    <input name='currententryperpage' type='hidden' value="{{ entryperpage }}" />
+                    <input name="deviceid" type="hidden" id="deviceid" />
+                    <input type="hidden" name="searchIpaddress" value="{{ formresult.searchIpaddress }}">
+                    <input type="hidden" name="searchDescription" value="{{ formresult.searchDescription }}">
+                    <input type="hidden" name="searchOsversion" value="{{ formresult.searchVersion }}">
+                    <input type="hidden" name="searchPlatform" value="{{ formresult.searchPlatform }}">
+                    <td><input type="text" name="ipaddress" class="input" value="" id="editIpaddress"></td>
+                    <td><input type="text" name="description" class="input" value="" id="editDescription" size="50"></td>
+                    <td><input type="text" name="username" class="input" id="editUsername" value=""></td>
+                    <td><input type="password" name="password" class="input" id="editPassword" value=""></td>
+                    <td><input type="text" name="usersecret" class="input" id="editsharedSecret" value=""></td>
+                    <td align="right"><input type="submit" name="action" value="Submit changes" class="button"></td>
+                </form>
+            </tr>
         </table>
     </div>
+
+    <div id="showEndpoints" style="display:none;">Show Endpoints</div>
+    <div id="showTrust" style="display:none;">Show Trusted Certificates</div>
+    <div id="showServices" style="display:none;">Show Services</div>
     {% endblock %}
