--- a/templates/useradmin.html
+++ b/templates/useradmin.html
@@ -11,29 +11,27 @@
 {% include 'navbar.html' %}
 
 {% set roleMap = ['Superuser','Administrator','Operator','Read only'] %}
-<div id="maincontainer" style="background-color: mintcream;">
+<div id="maincontainer">
     <table class="tablenoborder">
         <form method="post">
             <input id='action' name='action' type='hidden' value='' />
             <tr>
-                <td width="4%"><font class="font13px">Item</font></td>
-                <td width="1%" align="left" nowrap><font class="font13px">Username</font></td>
-                <td width="6%" align="left" valign="top"><input type="image" name="action" src="/static/images/down-arrow.svg" width="15px" height="15px" title="Order by IP address" value="order by ipaddress" style="outline:none !important;" onclick="return setHidden('order by ipaddress');"></td>
-                <td width="10%"><font class="font13px">Password</font></td>
-                <td width="1%" align="left" nowrap><font class="font13px">e-Mail address</font></td>
-                <td width="10%" align="left" valign="top"><input type="image" name="action" src="/static/images/down-arrow.svg" width="15px" height="15px" title="Order by description" value="order by description" style="outline:none !important;" onclick="return setHidden('order by description');"></td>
-                <td width="10%"><font class="font13px">Role</font></td>
-                <td width="16%" align="right"><input type="submit" class="button" value="Home" onclick="return setHidden('Home');"><input type="submit" class="button" value="Add user" onclick="return setHidden('Add user');"></td>
+                <td width="5%"><font class="font13pxgrey">Item</font></td>
+                <td width="20%" align="left" nowrap><font class="font13pxgrey">Username</font></td>
+                <td width="20%"><font class="font13pxgrey">Password</font></td>
+                <td width="20%" align="left" nowrap><font class="font13pxgrey">e-Mail address</font></td>
+                <td width="20%"><font class="font13pxgrey">Role</font></td>
+                <td width="15%" align="right"><input type="submit" class="button" value="Add user" onclick="return setHidden('Add user');"></td>
             </tr>
         </form>
         <tbody>
             {% if formresult ['action']  == 'Add user' %}
             <tr>
                 <form method="post">
-                    <td><font class="font13px">Add</font></td>
-                    <td colspan="2"><div class="field"><input type="text" name="username" class="input"></div></td>
+                    <td><font class="font13pxgrey">Add</font></td>
+                    <td><div class="field"><input type="text" name="username" class="input"></div></td>
                     <td><div class="field"><input type="password" name="password" class="input" size="50"></div></td>
-                    <td colspan="2"><div class="field"><input type="text" name="email" class="input"></div></td>
+                    <td><div class="field"><input type="text" name="email" class="input"></div></td>
                     <td>
                         <select name="role">
                             <option value="0">Superuser</option>
@@ -57,24 +55,24 @@
                 <form method="post">
                     <input type="hidden" name="id" value="{{ info['id'] }}">
                     <td><font class="font12px">{{ loop.index }}</font></td>
-                    <td colspan="2">
+                    <td>
                         <div class="field">
                             <input type="text" name="username" class="input" value="{{ info['username'] }}" {% if info['username']=="admin" %} onfocus="this.blur();" {% endif%}>
                         </div>
                     </td>
-                    <td colspan="2" nowrap>
+                    <td nowrap>
                         <div class="field">
                             <input type="password" name="password" class="input" value="{{ decryptPass("ArubaRocks!!!!!!",info['password']) }}" size="50" {% if info['username']=="admin" %} onfocus="this.blur();" {% endif%}>
                         </div>
                     </td>
                     <td>
                         <div class="field">
-                            <input type="text" name="email" class="input" value="{{ info['email'] }}">
+                            <input type="text" name="email" size="100" class="input" value="{{ info['email'] }}">
                         </div>
                     </td>
                     <td>
                         <div class="field">
-                            <select name="role">
+                            <select name="role" {% if info['username']=="admin" %} disabled {% endif %}>
                                 <option value="0" {% if info['role']=="0" %}selected{% endif %}>Superuser</option>
                                 <option value="1" {% if info['role']=="1" %}selected{% endif %}>Administrator</option>
                                 <option value="2" {% if info['role']=="2" %}selected{% endif %}>Operator</option>
@@ -93,9 +91,9 @@
             <form method="post">
                 <tr>
                     <td><font class="font12px">{{ loop.index }}</font></td>
-                    <td colspan="2"><font class="font12px">{{ info['username'] }}</font></td>
+                    <td><font class="font12px">{{ info['username'] }}</font></td>
                     <td><font class="font12px">xxxxxxxxxxx</font></td>
-                    <td colspan="2"><font class="font12px">{{ info['email'] }}</font></td>
+                    <td><font class="font12px">{{ info['email'] }}</font></td>
                     <td><font class="font12px">{{ roleMap[info['role'] | int] }}</font></td>
                     <td align="right">
                         <input type="submit" name="action" value="Edit" class="button" /><input type="submit" name="action" value="Delete" {% if info['username']=="admin" %} disabled {% endif%} class="button" onclick="return confirm('Are you sure you want to delete this item?')">
