--- a/templates/ztpprofile.html
+++ b/templates/ztpprofile.html
@@ -15,7 +15,7 @@
 {% else %}
 {% set totalpages=(totalentries|int/entryperpage|int)|int +1 %}
 {% endif %}
-<div id="maincontainer" style="background-color: mintcream;">
+<div id="maincontainer">
     <table class="tablenoborder" id="profileTable">
         <form method="post" name="ztpprofile" id="'ztpprofile">
             <input name="action" type="hidden" value="navigation" />
@@ -24,12 +24,12 @@
             <input name='totalpages' type="hidden" value="{{ totalpages }}" />
             <input name='currententryperpage' type='hidden' value="{{ entryperpage }}" />
             <tr>
-                <td width="5%" align="left" nowrap><font class="font13px">ID</font></td>
-                <td width="15%" align="left"><font class="font13px">Name</font></td>
-                <td width="15%" align="left" nowrap><font class="font13px">VRF</font></td>
-                <td width="15%" align="left"><font class="font13px">DNS</font></td>
+                <td width="5%" align="left" nowrap><font class="font13pxgrey">ID</font></td>
+                <td width="15%" align="left"><font class="font13pxgrey">Name</font></td>
+                <td width="15%" align="left" nowrap><font class="font13pxgrey">VRF</font></td>
+                <td width="15%" align="left"><font class="font13pxgrey">DNS</font></td>
                 <td width="15%" align="right">
-                    <font class="font13px">
+                    <font class="font13pxgrey">
                         Show <select name="entryperpage" onchange="this.form.submit()">
                             <option value="5" {% if entryperpage=="5" or entryperpage is not defined %} selected {% endif %}>5</option>
                             <option value="10" {% if entryperpage|int==10 %} selected {% endif %}>10</option>
@@ -88,15 +88,15 @@
     <div id="addProfile" style="display:none;" data-id="">
         <p>
             <table class="tablenoborder">
-                <tr style="background-color: black;line-height:20px;">
-                    <td colspan="7" style="color: darkorange;"><center>Add ZTP profile</center></td>
+                <tr style="background-color: grey;" class="tableTitle">
+                    <td colspan="7"><font class="font13pxwhite"><center>Add ZTP profile</center></font></td>
                 </tr>
                 <tr style="line-height:20px;">
-                    <td width="12%" align="left" nowrap><font class="font13px">Name</font></td>
-                    <td width="12%"><font class="font13px">Username</font></td>
-                    <td width="12%"><font class="font13px">Password</font></td>
-                    <td width="12%"><font class="font13px">VRF</font></td>
-                    <td width="6%"><font class="font13px">DNS</font></td>
+                    <td width="12%" align="left" nowrap><font class="font13pxgrey">Name</font></td>
+                    <td width="12%"><font class="font13pxgrey">Username</font></td>
+                    <td width="12%"><font class="font13pxgrey">Password</font></td>
+                    <td width="12%"><font class="font13pxgrey">VRF</font></td>
+                    <td width="6%"><font class="font13pxgrey">DNS</font></td>
                 </tr>
                 <tr>
                     <form method="post">
@@ -131,15 +131,15 @@
     <div id="editProfile" style="display:none;" data-id="">
         <p>
             <table class="tablenoborder">
-                <tr style="background-color: black;line-height:20px;">
-                    <td colspan="7" style="color: darkorange;"><center>Edit ZTP profile</center></td>
+                <tr style="background-color: grey;" class="tableTitle">
+                    <td colspan="7"><font class="font13pxwhite"><center>Edit ZTP profile</center></font></td>
                 </tr>
-                <tr style="line-height:20px;">
-                    <td width="15%" align="left" nowrap><font class="font13px">Name</font></td>
-                    <td width="15%"><font class="font13px">Username</font></td>
-                    <td width="15%"><font class="font13px">Password</font></td>
-                    <td width="15%"><font class="font13px">VRF</font></td>
-                    <td width="15%"><font class="font13px">DNS</font></td>
+                <tr>
+                    <td width="15%" align="left" nowrap><font class="font13pxgrey">Name</font></td>
+                    <td width="15%"><font class="font13pxgrey">Username</font></td>
+                    <td width="15%"><font class="font13pxgrey">Password</font></td>
+                    <td width="15%"><font class="font13pxgrey">VRF</font></td>
+                    <td width="15%"><font class="font13pxgrey">DNS</font></td>
                     <td></td>
                 </tr>
                 <tr>
